kubernetes/apps/nextcloud/nextcloud/config/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations: 
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.middlewares: |
      networking-cloudflare-only@kubernetescrd,
      networking-request-limit@kubernetescrd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
          namespace: nextcloud
  tls:
    secretName: nextcloud-tls
